# AtlasRAG

./: README.md
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
client/src/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
client/src/app/(dashboard)/projects/: page.tsx
client/src/app/(dashboard)/projects/[projectId]/: page.tsx
client/src/app/(dashboard)/projects/[projectId]/chats/[chatId]/: page.tsx
client/src/components/layout/: Sidebar.tsx
client/src/lib/types/: index.ts
server/: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
server/evaluation/datasets/: ragas_evaluation_dataset.json  results.csv
server/evaluation/notebooks/: ragas_experimentation.ipynb
server/evaluation/scripts/: collect_data.py  run_evaluation.py
server/notebooks/: simple_agent.ipynb  supervisor_agent.ipynb
server/src/: server.py
server/src/agents/simple_agent/: agent.py
server/src/agents/supervisor_agent/: agent.py
server/src/config/: index.py  logging.py
server/src/middleware/: logging_middleware.py
server/src/models/: index.py
server/src/rag/ingestion/: index.py  utils.py
server/src/rag/retrieval/: index.py  utils.py
server/src/routes/: chatRoutes.py  projectFilesRoutes.py  projectRoutes.py  userRoutes.py
server/src/services/: awsS3.py  celery.py  clerkAuth.py  llm.py  supabase.py  webScrapper.py
server/src/utils/: index.py
server/supabase/: config.toml
server/supabase/migrations/: 20251116124656_initial_schema.sql
